<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFF99"
    android:gravity="top|center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvEcFormaGeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tvFormageneral" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tvIngresarCoef"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/layoutCoef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/eTCoef1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="x² + "
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/eTCoef2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:inputType="numberDecimal|numberSigned"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="x + "
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/eTCoef3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:inputType="numberDecimal|numberSigned"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" = 0"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnRaices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRaices" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/btnBorrar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRaices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    </LinearLayout>

</LinearLayout>